# samstack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  pyproject.toml
.claude/agents/: fixture-reviewer.md
.claude/skills/add-resource/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: _ci.yml  ci.yml  lockfile.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/archived/v2.3.0-pytest-xdist-support/: MILESTONE-COMPLETE.md  ROADMAP-v2.3.0.md  STATE-v2.3.0.md
.planning/archived/v2.3.0-pytest-xdist-support/08-core-xdist-coordination/: 08-02-SUMMARY.md  08-RESEARCH.md
.planning/archived/v2.3.0-pytest-xdist-support/09-docker-infra-xdist-awareness/: 09-01-SUMMARY.md  09-REVIEW.md  09-UAT.md  09-VALIDATION.md  SECURITY.md
.planning/archived/v2.3.0-pytest-xdist-support/10-sam-api-lambda-xdist-awareness/: 10-DISCUSSION-LOG.md  10-REVIEW-FIX.md
.planning/archived/v2.3.0-pytest-xdist-support/11-mock-coordination/: 11-01-PLAN.md  11-01-SUMMARY.md  11-CONTEXT.md  11-VALIDATION.md
.planning/archived/v2.3.0-pytest-xdist-support/12-integration-testing-ci-docs-benchmarking/: 12-01-SUMMARY.md  12-02-SUMMARY.md  12-CONTEXT.md  12-HUMAN-UAT.md  12-REVIEW-FIX.md  12-REVIEW.md  12-VERIFICATION.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.2.0-REQUIREMENTS.md  v2.2.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-ryuk-network-wiring/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-REVIEW.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-container-level-ryuk-verification/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-UAT.md
.planning/milestones/v1.0-phases/03-sub-container-cascade-verification/: 03-01-PLAN.md  03-UAT.md  (+6 more)
.planning/phases/08-core-xdist-coordination/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md
.planning/phases/09-docker-infra-xdist-awareness/: 09-01-PLAN.md  09-02-PLAN.md  09-02-SUMMARY.md  09-RESEARCH.md  09-REVIEW-FIX.md
.planning/phases/10-sam-api-lambda-xdist-awareness/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-CONTEXT.md  10-REVIEW.md
.planning/phases/11-mock-coordination/: 11-DISCUSSION-LOG.md  11-RESEARCH.md
.planning/phases/12-integration-testing-ci-docs-benchmarking/: 12-01-PLAN.md  12-02-PLAN.md  12-DISCUSSION-LOG.md  12-HUMAN-UAT.md  12-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/superpowers/plans/: 2026-04-03-samstack-implementation.md
docs/superpowers/specs/: 2026-04-03-samstack-design.md  2026-04-09-localstack-resource-fixtures-design.md
scripts/: benchmark.py
src/samstack/: __init__.py  _constants.py  _docker.py  _errors.py  _process.py  _version.py  _xdist.py  plugin.py  settings.py
src/samstack/fixtures/: _sam_container.py  localstack.py  resources.py  sam_api.py  sam_build.py  sam_lambda.py
src/samstack/mock/: __init__.py  fixture.py  handler.py  types.py
src/samstack/resources/: __init__.py  dynamodb.py  s3.py  sns.py  sqs.py
tests/: conftest.py  test_errors.py  test_localstack_integration.py  test_plugin.py  test_process.py  test_ryuk_sam_labels.py  test_sam_api.py  test_sam_build.py  test_sam_lambda.py  test_settings.py  test_subcontainer_teardown.py
tests/fixtures/hello_world/: template.yaml
tests/fixtures/multi_lambda/: template.test.yaml
tests/fixtures/warm_check/: template.yaml
tests/integration/: conftest.py  test_dynamodb_fixtures.py  test_ryuk_container_labels.py  test_ryuk_crash.py  test_s3_fixtures.py  test_sns_fixtures.py  test_sqs_fixtures.py  test_warm_crash.py
tests/multi_lambda/: conftest.py  test_multi_lambda.py
tests/unit/: test_docker_network.py  test_dynamo_table.py  test_mock_handler.py  test_mock_types.py  test_mock_xdist.py  test_pre_warm.py  test_pre_warm_api.py  test_s3_bucket.py  test_sam_api_warm.py  test_sam_service_config.py  test_sns_topic.py  test_sqs_queue.py  test_warm_functions.py  test_xdist_detection.py  test_xdist_filelock.py  test_xdist_fixtures.py  test_xdist_localstack.py  test_xdist_resource_isolation.py  test_xdist_sam_api.py  test_xdist_sam_build.py  test_xdist_sam_lambda.py  test_xdist_shared_session.py  test_xdist_state_file.py
tests/warm/: conftest.py  test_warm_api.py  test_warm_lambda.py
tests/xdist/: conftest.py  test_basic.py  test_resource_parallelism.py
tests/xdist/test_crash/: conftest.py  test_crash.py  test_infra_trigger.py
(+4 files in other folders)
