[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "samstack"
version = "2.2.0"
description = "Pytest fixtures for testing AWS SAM Lambdas locally with LocalStack"
readme = "README.md"
authors = [
    { name = "Ivan Shcherbenko", email = "ivan_shcherbenko@outlook.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["aws", "sam", "localstack", "pytest", "lambda", "testing", "fixtures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "testcontainers[localstack]>=4.10.0",
    "docker>=7.0.0",
    "boto3>=1.35.0",
    "filelock>=3.13",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/PhishStick-hub/samstack"
Repository = "https://github.com/PhishStick-hub/samstack"
Issues = "https://github.com/PhishStick-hub/samstack/issues"

[project.entry-points."pytest11"]
samstack = "samstack.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/samstack"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]
markers = [
    "unit: no Docker required — settings, process helpers, error types, plugin discovery",
    "integration: requires Docker + SAM + LocalStack; hello_world fixture; run with -n 4",
    "crash: Ryuk teardown and crash-recovery scenarios; sequential, may be skipped on macOS",
    "warm: warm-container verification; warm_check fixture; isolated session, run with -n 2",
    "multi: multi-Lambda mock flow; multi_lambda fixture; isolated session, sequential",
    "xdist: xdist parallel-execution self-tests; isolated session, run with -n 2",
    "xdist_crash: xdist crash tests expecting container startup failure; continue_on_error",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "requests>=2.32.0",
    "boto3-stubs[lambda,s3,dynamodb,sqs,sns]>=1.35.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]
